--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css" media="screen" title="no title" charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	  <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body ng-controller="Main" class="indigo darken-2">
     <main class="item {{seccionName}}" ng-class="{'active': mainActive  , 'second' : secondMain }">
