--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <script src="bower_components/angular/angular.min.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
     <script src="js/multiplicacion.controller.js" charset="utf-8"></script>
+    <script src="js/gauss.controller.js" charset="utf-8"></script>
   </body>
 </html>
