se termino la suma y la resta de matrices

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <li class="collection-item" ng-click="select('gauss')">Gauss</li>
       </ul>
     </main>
+    <!-- <main class="item">
+      <ul class="collection hoverable">
+        <li class="collection-item">Creditos</li>
+      </ul>
+    </main> -->
     <i class="material-icons close" ng-class="activeClose ? 'active': '' " ng-click="close()">close</i>
     <div class="seccion multiplicacion " ng-class="seccionActive? 'active' : ''">
       <div class="card hoverable row">
@@ -28,5 +33,7 @@
     <script src="js/main.js" charset="utf-8"></script>
     <script src="js/multiplicacion.controller.js" charset="utf-8"></script>
     <script src="js/gauss.controller.js" charset="utf-8"></script>
+    <script src="js/suma.controller.js" charset="utf-8"></script>
+    <script src="js/resta.controller.js" charset="utf-8"></script>
   </body>
 </html>
